--- a/README
+++ b/README
@@ -3,3 +3,5 @@ This project is designed to teach programming in python
 Additional topics will be source code management with git and best practices
 
 There will be various lessons added to this project as it continues
+
+Testing adding a line
